# inotify-daemon

./: Makefile.in  Makefile.inc.in  README.md  build_debian_packages  configure  configure.ac  dist-files.source  ind_config.sh  install.sh  version_informations
deb/: Makefile.in  control.source  copyright  create_deb.sh  new-preinst.source  old-prerm.source  postinst.source
doc/: Makefile.in  Makefile.inc.in
doc/en/: Makefile.in  inotify-daemon.8.source  inotify-daemon.conf.5.source  inotify-daemon.texi.source  version.texi.source
doc/fr/: Makefile.in  inotify-daemon.8.source  inotify-daemon.conf.5.source  inotify-daemon.texi.source
doc_en/: inotify-daemon.8.source  inotify-daemon.texi.source
doc_fr/: Makefile.in  inotify-daemon.texi.source
rpm/: Makefile  Makefile.in  create_rpm.sh  inotify-daemon.spec.source
src/: Makefile.in  config.h.in  handler_sample.sh  ind_comm.c  ind_command.c  ind_conf.c  ind_config.h  ind_config.h.in  ind_configuration.c  ind_dire.c  ind_directory.c  ind_engi.c  ind_engine.c  ind_erro.c  ind_error.c  ind_fork.c  ind_form.c  ind_inot.c  ind_inotify.c  ind_log.c  ind_log_file.c  ind_log_syslog.c  ind_logg.c  ind_logg_file.c  ind_logg_syslog.c  ind_main.c  ind_misc.c  ind_nopt.c  ind_opts.c  ind_opts.h  ind_path.c  ind_pidf.c  ind_sign.c  ind_signal.c  ind_tunables.h  inotify-daemon.c  inotify-daemon.conf.source  inotify-daemon.h  inotify-daemon.service.source  sample.conf.source
util/: source2any.py
